fix: update font weights and adjust header spacing for improved consistency

--- a/docs/css/fonts.css
+++ b/docs/css/fonts.css
@@ -6,7 +6,7 @@
     font-family: 'alumni_sans_pinstriperegular';
     src: url('/docs/fonts/Woff2/alumnisanspinstripe-regular-webfont.woff2') format('woff2'),
         url('/docs/fonts/Woff2/alumnisanspinstripe-regular-webfont.woff') format('woff');
-    font-weight: normal;
+    font-weight: 100;
     font-style: normal;
 
 }
